console: Change owned tab name and add tooltip

--- a/pkg/webui/locales/ja.json
+++ b/pkg/webui/locales/ja.json
@@ -517,6 +517,20 @@
   "console.containers.documentation-dashboard-panel.index.tts": "",
   "console.containers.documentation-dashboard-panel.index.reference": "",
   "console.containers.documentation-dashboard-panel.index.gettingStarted": "",
+  "console.containers.email-notifications-form.index.CLIENT_REQUESTED": "",
+  "console.containers.email-notifications-form.index.USER_REQUESTED": "",
+  "console.containers.email-notifications-form.index.API_KEY_CREATED": "",
+  "console.containers.email-notifications-form.index.API_KEY_CHANGED": "",
+  "console.containers.email-notifications-form.index.COLLABORATOR_CHANGED": "",
+  "console.containers.email-notifications-form.index.ENTITY_STATE_CHANGED": "",
+  "console.containers.email-notifications-form.index.INVITATION": "",
+  "console.containers.email-notifications-form.index.PASSWORD_CHANGED": "",
+  "console.containers.email-notifications-form.index.errorNotification": "",
+  "console.containers.email-notifications-form.index.requiresAdminAction": "",
+  "console.containers.email-notifications-form.index.unsubscribeFromEverything": "",
+  "console.containers.email-notifications-form.index.unsubscribeDescription": "",
+  "console.containers.email-notifications-form.index.discardChanges": "",
+  "console.containers.email-notifications-form.index.updateEmailPreferences": "",
   "console.containers.event-split-frame.index.expandEventPanel": "",
   "console.containers.freq-plans-select.utils.warning": "",
   "console.containers.freq-plans-select.utils.none": "",
@@ -659,6 +673,8 @@
   "console.containers.gateways-table.index.restoreFail": "エラーが発生し、ゲートウェイを復元することができませんでした",
   "console.containers.gateways-table.index.purgeSuccess": "ゲートウェイをパージ",
   "console.containers.gateways-table.index.purgeFail": "エラーが発生したため、ゲートウェイをパージすることができませんでした",
+  "console.containers.gateways-table.index.myGateways": "",
+  "console.containers.gateways-table.index.myGatewaysTooltip": "",
   "console.containers.header.bookmarks-dropdown.noBookmarks": "",
   "console.containers.header.bookmarks-dropdown.noBookmarksDescription": "",
   "console.containers.header.bookmarks-dropdown.threshold": "",
@@ -997,6 +1013,8 @@
   "console.views.gateway-general-settings.messages.techContactDescription": "",
   "console.views.gateway-general-settings.messages.deleteGatewayDefaultMessage": "",
   "console.views.organization-add.index.orgDescription": "",
+  "console.views.user-settings-email-notifications.index.emailNotifications": "",
+  "console.views.user-settings-email-notifications.index.customizeEmailNotifications": "",
   "console.views.user-settings-oauth-auth-settings.index.deleteButton": "",
   "console.views.user-settings-oauth-auth-settings.index.deleteSuccess": "",
   "console.views.user-settings-oauth-auth-settings.index.deleteFailure": "",
