--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -405,6 +405,8 @@
   "console.containers.applications-table.index.purgeSuccess": "Application purged",
   "console.containers.applications-table.index.purgeFail": "There was an error and the application could not be purged",
   "console.containers.applications-table.index.otherClusterTooltip": "This application is registered on a different cluster (`{host}`). To access this application, use the Console of the cluster that this application was registered on.",
+  "console.containers.applications-table.index.myApplications": "My applications",
+  "console.containers.applications-table.index.myApplicationsTooltip": "Applications that you are a collaborator to",
   "console.containers.deployment-component-status.index.availableComponents": "Available components",
   "console.containers.deployment-component-status.index.versionInfo": "Deployment",
   "console.containers.deployment-component-status.index.statusPage": "Go to status page",
